--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -75,7 +75,7 @@ sites:
   - name: Foundation React Devcom UMM
     url: https://foundation.react.natee.my.id
   - name: Foundation Express Devcom UMM
-    url: https://foundation.express.natee.my.id   
+    url: https://foundation.express.natee.my.id/api/notes
 
 status-website:
   cname: uptime.natee.my.id
